# nexa-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  mcpize.yaml
crates/nexa-bench/: Cargo.toml
crates/nexa-bench/benches/: nexacore_bench.rs
crates/nexa-bench/src/: lib.rs
crates/nexa-cli/: Cargo.toml
crates/nexa-cli/src/: main.rs
crates/nexa-compress/: Cargo.toml
crates/nexa-compress/src/: lib.rs
crates/nexa-core/: Cargo.toml
crates/nexa-core/benches/: hypervector_bench.rs
crates/nexa-core/src/: error.rs  format.rs  hypervector.rs  lib.rs  simd.rs  similarity.rs
crates/nexa-decoder/: Cargo.toml
crates/nexa-decoder/src/: lib.rs
crates/nexa-encoder/: Cargo.toml
crates/nexa-encoder/src/: lib.rs
crates/nexa-forge/: Cargo.toml
crates/nexa-forge/src/: lib.rs
crates/nexa-hdc/: Cargo.toml
crates/nexa-hdc/src/: lib.rs
crates/nexa-holography/: Cargo.toml
crates/nexa-holography/src/: lib.rs
crates/nexa-memory/: Cargo.toml
crates/nexa-memory/src/: lib.rs
crates/nexa-proof/: Cargo.toml
crates/nexa-proof/src/: lib.rs
crates/nexa-python/: Cargo.toml
crates/nexa-python/src/: lib.rs
crates/nexa-runtime/: Cargo.toml
crates/nexa-runtime/src/: lib.rs
crates/nexa-topology/: Cargo.toml
crates/nexa-topology/src/: lib.rs
mcp/: server.py
proofs/: Nexa.lean  lake-manifest.json  lakefile.toml
proofs/Nexa/: Binding.lean  CleanupMemory.lean  Decoding.lean  Encoding.lean  Encryption.lean  Homomorphism.lean  HyperVector.lean  Permutation.lean  RecoveryBounds.lean  Similarity.lean
