[workspace]
resolver = "2"
members = [
    "crates/nexa-core",
    "crates/nexa-hdc",
    "crates/nexa-holography",
    "crates/nexa-runtime",
    "crates/nexa-memory",
    "crates/nexa-encoder",
    "crates/nexa-decoder",
    "crates/nexa-topology",
    "crates/nexa-cli",
    "crates/nexa-bench",
    "crates/nexa-python",
    "crates/nexa-proof",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/yablokolabs/nexa-core"
homepage = "https://github.com/yablokolabs/nexa-core"
authors = ["YablokoLabs"]

[workspace.dependencies]
# Core dependencies
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
bitvec = "1"
rayon = "1"
memmap2 = "0.9"
nalgebra = "0.33"
ndarray = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
csv = "1"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
nexa-core = { path = "crates/nexa-core" }
nexa-hdc = { path = "crates/nexa-hdc" }
nexa-holography = { path = "crates/nexa-holography" }
nexa-runtime = { path = "crates/nexa-runtime" }
nexa-memory = { path = "crates/nexa-memory" }
nexa-encoder = { path = "crates/nexa-encoder" }
nexa-decoder = { path = "crates/nexa-decoder" }
nexa-topology = { path = "crates/nexa-topology" }
nexa-proof = { path = "crates/nexa-proof" }
