[package]
name = "nexa-cli"
version = "0.1.0"
edition = "2021"
description = "NexaCore CLI — encode, decode, inspect, benchmark, recover"

[[bin]]
name = "nexa"
path = "src/main.rs"

[dependencies]
nexa-core = { workspace = true }
nexa-hdc = { workspace = true }
nexa-holography = { workspace = true }
nexa-memory = { workspace = true }
nexa-encoder = { workspace = true }
nexa-decoder = { workspace = true }
nexa-runtime = { workspace = true }
nexa-topology = { workspace = true }
nexa-proof = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
