[package]
name = "nexa-core"
version = "0.1.0"
edition = "2021"
description = "Core hypervector engine for NexaCore — SIMD-optimized HDC primitives"

[dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
bitvec = { workspace = true }
rayon = { workspace = true }
memmap2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "hypervector_bench"
harness = false
