[package]
name = "nexa-holography"
version = "0.1.0"
edition = "2021"
description = "Holographic reduced representations — circular convolution, holographic memory"

[dependencies]
nexa-core = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
