[package]
name = "nexa-memory"
version = "0.1.0"
edition = "2021"
description = "Cleanup memory, sparse distributed memory, associative retrieval"

[dependencies]
nexa-core = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
