[package]
name = "nexa-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for NexaCore"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
nexa-core = { path = "../nexa-core" }
nexa-encoder = { path = "../nexa-encoder" }
nexa-runtime = { path = "../nexa-runtime" }
nexa-compress = { path = "../nexa-compress" }
serde_json = "1"

[lib]
crate-type = ["cdylib"]
